[package]
name = "bolt-preconf"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.6.2", features = ["consensus", "rlp", "signers", "signer-local", "rpc-types", "eips"] }
anyhow = "1.0.93"
rand = "0.8.5"
reqwest = { version = "0.12.8", features = ["json"] }
serde_json = "1.0.132"
tokio = { version = "1.28.2", features = ["full"] }
secp256k1 = { version = "0.30.0", features = ["recovery"] }
sha3 = "0.10.8"
